<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="10dp"
      tools:context=".view.activity.LoginActivity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="38dp"
      android:layout_marginBottom="40dp"
      app:layout_constraintBottom_toTopOf="@+id/Titulo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3"
      app:srcCompat="@drawable/coche_main" />

  <TextView
      android:id="@+id/Titulo"
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="45dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="45dp"
      android:text="Estate seguro con tu plaza reservada"
      android:textAlignment="center"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintBottom_toTopOf="@+id/imageView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/yourparking_blue" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NombreUsuariolayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:hint="Correo electrónico"
        app:layout_constraintBottom_toTopOf="@+id/iniciarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo"
        app:layout_constraintVertical_bias="0.04000002"
        tools:ignore="MissingConstraints">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="53dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ContraseñaInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="Contraseña"
        android:orientation="horizontal"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/iniciarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NombreUsuariolayout"
        app:layout_constraintVertical_bias="0.050000012"
        tools:ignore="MissingConstraints">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="53dp"
          android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="¿Has olvidado tu contraseña?"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ContraseñaInputLayout" />


    <Button
        android:id="@+id/iniciarSesion"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/title_login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo"
        tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/registrarse"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="7dp"
      android:width="320dp"
      android:text="Regístrate"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/iniciarSesion"
      tools:ignore="MissingConstraints" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="o accede con"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginVertical="10dp"
      app:layout_constraintTop_toBottomOf="@id/registrarse"
      android:textColor="#949494"
      />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/signInWithGoogle"
      style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text=" Acceder con google"
      android:textSize="16sp"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:icon="@drawable/google"
      app:iconGravity="start"
      app:iconSize="24dp"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>